--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
                 <!-- Vanilla -->
                 <div class="scroll-item">
                   <div class="card-hover" style="background: ${bgColor}; border-radius: 20px; overflow: hidden; height: 100%;">
-                    <img src="https://images.unsplash.com/photo-1563805042-7684c019e1cb" alt="Vanilla" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
+                    <img src="https://encrypted-tbn1.gstatic.com/images?q=tbn:ANd9GcRZUD-CFiLXAfvMtVL0VbdnyzpHjRa72LFDp3Cc57FHZEZpwOS4" alt="Vanilla" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
                     <div style="padding: clamp(16px, 4vw, 20px);">
                       <h4 style="font-size: clamp(${baseSize * 1.05}px, 4vw, ${baseSize * 1.25}px); font-weight: bold; margin-bottom: 8px; color: ${textColor};">Vanilla</h4>
                       <p style="font-size: clamp(${baseSize * 0.8}px, 3.2vw, ${baseSize * 0.875}px); color: #6b7280; margin-bottom: 16px;">Rasa vanilla klasik yang lembut</p>
@@ -248,7 +248,7 @@
                 <!-- Chocolate -->
                 <div class="scroll-item">
                   <div class="card-hover" style="background: ${bgColor}; border-radius: 20px; overflow: hidden; height: 100%;">
-                    <img src="https://images.unsplash.com/photo-1578985545062-69928b1d9587" alt="Chocolate" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
+                    <img src="https://i.pinimg.com/236x/ae/cf/01/aecf01eaafc0b4236c46c781cec3662c.jpg" alt="Chocolate" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
                     <div style="padding: clamp(16px, 4vw, 20px);">
                       <h4 style="font-size: clamp(${baseSize * 1.05}px, 4vw, ${baseSize * 1.25}px); font-weight: bold; margin-bottom: 8px; color: ${textColor};">Chocolate</h4>
                       <p style="font-size: clamp(${baseSize * 0.8}px, 3.2vw, ${baseSize * 0.875}px); color: #6b7280; margin-bottom: 16px;">Cokelat premium yang kaya rasa</p>
@@ -265,7 +265,7 @@
                 <!-- Cookies & Cream -->
                 <div class="scroll-item">
                   <div class="card-hover" style="background: ${bgColor}; border-radius: 20px; overflow: hidden; height: 100%;">
-                    <img src="https://images.unsplash.com/photo-1499636136210-6f4ee915583e" alt="Cookies & Cream" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
+                    <img src="https://i.pinimg.com/736x/9a/27/f9/9a27f914898b8e13f7d5cc89b18af8e1.jpg" alt="Cookies & Cream" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
                     <div style="padding: clamp(16px, 4vw, 20px);">
                       <h4 style="font-size: clamp(${baseSize * 1.05}px, 4vw, ${baseSize * 1.25}px); font-weight: bold; margin-bottom: 8px; color: ${textColor};">Cookies & Cream</h4>
                       <p style="font-size: clamp(${baseSize * 0.8}px, 3.2vw, ${baseSize * 0.875}px); color: #6b7280; margin-bottom: 16px;">Perpaduan cookies dan krim yang sempurna</p>
@@ -282,7 +282,7 @@
                 <!-- Mint Chip -->
                 <div class="scroll-item">
                   <div class="card-hover" style="background: ${bgColor}; border-radius: 20px; overflow: hidden; height: 100%;">
-                    <img src="https://images.unsplash.com/photo-1497034825429-c343d7c6a68f" alt="Mint Chip" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
+                    <img src="https://encrypted-tbn3.gstatic.com/images?q=tbn:ANd9GcQ9z5H-jbLhZ7isBjRZ7D8ixG8ZUD-SrvfSFYna217weSqBorzx" alt="Mint Chip" class="product-image" onerror="this.src=''; this.alt='Image failed to load'; this.style.display='none';">
                     <div style="padding: clamp(16px, 4vw, 20px);">
                       <h4 style="font-size: clamp(${baseSize * 1.05}px, 4vw, ${baseSize * 1.25}px); font-weight: bold; margin-bottom: 8px; color: ${textColor};">Mint Chip</h4>
                       <p style="font-size: clamp(${baseSize * 0.8}px, 3.2vw, ${baseSize * 0.875}px); color: #6b7280; margin-bottom: 16px;">Kesegaran mint dengan chip cokelat</p>
@@ -425,7 +425,7 @@
                 <p style="font-size: clamp(${baseSize * 0.875}px, 3.5vw, ${baseSize}px);">Pelanggan Puas</p>
               </div>
               <div>
-                <div style="font-size: clamp(${baseSize * 1.75}px, 6vw, ${baseSize * 2.5}px); font-weight: bold; margin-bottom: 8px;">3</div>
+                <div style="font-size: clamp(${baseSize * 1.75}px, 6vw, ${baseSize * 2.5}px); font-weight: bold; margin-bottom: 8px;">8</div>
                 <p style="font-size: clamp(${baseSize * 0.875}px, 3.5vw, ${baseSize}px);">Varian Rasa</p>
               </div>
               <div>
